--- a/Data/GAIA/GAIA_Downloader.ipynb
+++ b/Data/GAIA/GAIA_Downloader.ipynb
@@ -6,7 +6,7 @@
    "id": "1ea3a269-46d2-452d-b85e-23e36d8d1af1",
    "metadata": {},
    "source": [
-    "# [GALAXY] - GAIA Download\n",
+    "# NGC 4696 - GAIA Download\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Note:</b> This notebook should be run with the <span style=\"font-family: 'Ariel', monospace;\">stenv</span> environment\n",
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# Get the NED Data\n",
-    "nedDataTable = Table.read('../NED/[GALAXY_SHORT]-NED_Data.ecsv')"
+    "nedDataTable = Table.read('../NED/NGC4696-NED_Data.ecsv')"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Write out the Full Table\n",
-    "objTable.write('[GALAXY_SHORT]-GAIA-AlignmentStars.ecsv', overwrite=True)"
+    "objTable.write('NGC4696-GAIA-AlignmentStars.ecsv', overwrite=True)"
    ]
   },
   {
@@ -220,8 +220,8 @@
     "\n",
     "# Write Coordinates to File\n",
     "# Unpack with\n",
-    "# QTable.read('[GALAXY_SHORT]-GAIA-AlignmentStars-Coordinates.ecsv')['SkyCoord']\n",
-    "QTable([objCoords], names=['SkyCoord']).write('[GALAXY_SHORT]-GAIA-AlignmentStars-Coordinates.ecsv', overwrite=True)"
+    "# QTable.read('NGC4696-GAIA-AlignmentStars-Coordinates.ecsv')['SkyCoord']\n",
+    "QTable([objCoords], names=['SkyCoord']).write('NGC4696-GAIA-AlignmentStars-Coordinates.ecsv', overwrite=True)"
    ]
   },
   {
@@ -239,10 +239,10 @@
     "    regs.append(PointSkyRegion(crd))\n",
     "\n",
     "# Write to DS9 Region File\n",
-    "regs.write('[GALAXY_SHORT]-GAIA-AlignmentStars-Coordinates.reg', overwrite=True)\n",
+    "regs.write('NGC4696-GAIA-AlignmentStars-Coordinates.reg', overwrite=True)\n",
     "\n",
     "# Change Display Style to 'x'\n",
-    "with open('[GALAXY_SHORT]-GAIA-AlignmentStars-Coordinates.reg', 'r') as fid:\n",
+    "with open('NGC4696-GAIA-AlignmentStars-Coordinates.reg', 'r') as fid:\n",
     "\n",
     "    # Get all the Lines\n",
     "    lines = fid.readlines()\n",
@@ -250,7 +250,7 @@
     "# Add the New Line\n",
     "lines.insert(1, 'global point=x color=cyan\\n')\n",
     "\n",
-    "with open('[GALAXY_SHORT]-GAIA-AlignmentStars-Coordinates.reg', 'w') as fid:\n",
+    "with open('NGC4696-GAIA-AlignmentStars-Coordinates.reg', 'w') as fid:\n",
     "\n",
     "    # Write all the Lines\n",
     "    fid.writelines(lines)"
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "# Write as RA, Dec Catalog for TweakReg\n",
-    "with open('[GALAXY_SHORT]-GAIA-RefCatalog-icrs.txt', 'w') as fid:\n",
+    "with open('NGC4696-GAIA-RefCatalog-icrs.txt', 'w') as fid:\n",
     "\n",
     "    # Loop Through Sources\n",
     "    for crd in objCoords:\n",
