--- a/Images/ImageReducer.ipynb
+++ b/Images/ImageReducer.ipynb
@@ -5,7 +5,7 @@
    "id": "637a0e8a-4df7-4740-8b75-f2d67488f0c3",
    "metadata": {},
    "source": [
-    "# [GALAXY] - Image Reducer\n",
+    "# NGC 4696 - Image Reducer\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Note:</b> This notebook should be run with the <span style=\"font-family: 'Ariel', monospace;\">stenv</span> environment.\n",
@@ -206,7 +206,7 @@
     "        wcsname='GAIA',\n",
     "        clean=True,\n",
     "        configobj=None,\n",
-    "        refcat='../Data/GAIA/[GALAXY_SHORT]-GAIA-RefCatalog-icrs.txt',\n",
+    "        refcat='../Data/GAIA/NGC4696-GAIA-RefCatalog-icrs.txt',\n",
     "        runfile=f'TweakReg-GAIA-{filter}.log',\n",
     "        searchrad=0.35,\n",
     "        minobj=15,\n",
@@ -309,7 +309,7 @@
     "# Drizzle Images\n",
     "AstroDrizzle(\n",
     "    [str(fn) for fn in fileNameDict['F814W']],\n",
-    "    output='[GALAXY_SHORT]-F814W',\n",
+    "    output='NGC4696-F814W',\n",
     "    runfile='F814W-Astro.log',\n",
     "    wcskey='GAIA',\n",
     "    context=False,\n",
@@ -354,7 +354,7 @@
     "# Drizzle Images\n",
     "AstroDrizzle(\n",
     "    [str(fn) for fn in fileNameDict['F475W']],\n",
-    "    output='[GALAXY_SHORT]-F475W',\n",
+    "    output='NGC4696-F475W',\n",
     "    runfile='F475W-Astro.log',\n",
     "    wcskey='GAIA',\n",
     "    context=False,\n",
@@ -374,7 +374,7 @@
     "    final_pixfrac=0.8,\n",
     "    final_bits=DQ_GOOD_PIX,\n",
     "    final_wcs=True,\n",
-    "    final_refimage='[GALAXY_SHORT]-F814W_drc.fits'\n",
+    "    final_refimage='NGC4696-F814W_drc.fits'\n",
     ")"
    ]
   },
