--- a/Data/NED/NED_InfoDownloader.ipynb
+++ b/Data/NED/NED_InfoDownloader.ipynb
@@ -5,7 +5,7 @@
    "id": "53e244d9-b121-4eef-b882-49e33b503bc3",
    "metadata": {},
    "source": [
-    "# [GALAXY] - NED Downloader\n",
+    "# NGC 4696 - NED Downloader\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Note:</b> This notebook should be run with the <span style=\"font-family: 'Ariel', monospace;\">stenv</span> environment.\n",
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Download by Object\n",
-    "dataTable = Ned.query_object('[GALAXY]')"
+    "dataTable = Ned.query_object('NGC 4696')"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "# Save the Table to a File\n",
     "# Note that Coords seem to be in Fk5, J2000\n",
-    "dataTable.write('[GALAXY_SHORT]-NED_Data.ecsv', format='ascii.ecsv', overwrite=True)"
+    "dataTable.write('NGC4696-NED_Data.ecsv', format='ascii.ecsv', overwrite=True)"
    ]
   }
  ],
