--- a/Images/ImageDownloader.ipynb
+++ b/Images/ImageDownloader.ipynb
@@ -5,7 +5,7 @@
    "id": "272a791d-5edd-4758-b52c-dacbe788af66",
    "metadata": {},
    "source": [
-    "# [GALAXY] Image Downloader\n",
+    "# NGC 4696 Image Downloader\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Note:</b> This notebook should be run with the <span style=\"font-family: 'Ariel', monospace;\">stenv</span> environment.\n",
@@ -76,8 +76,8 @@
    "source": [
     "# Get Observations\n",
     "obsTable = Observations.query_criteria(\n",
-    "    objectname=\"[GALAXY_SHORT]\",\n",
-    "    target_name='[GALAXY_WILDCARD]',\n",
+    "    objectname=\"NGC4696\",\n",
+    "    target_name='NGC*4696*',\n",
     "    obs_collection='HST',\n",
     "    dataproduct_type='IMAGE',\n",
     "    provenance_name=['CALACS', 'CALWF3'],\n",
