Ran the Drizzler
Had to adjust away from parallel processing which is broken right now for some reason.

--- a/Images/ImageReducer.ipynb
+++ b/Images/ImageReducer.ipynb
@@ -283,10 +283,7 @@
    "source": [
     "# DQ Bits\n",
     "DQ_WARM_PIX = 64\n",
-    "DQ_BAD_COL  = 128\n",
-    "DQ_FULL_WELL= 256\n",
-    "DQ_SINK_PIX = 1024\n",
-    "DQ_GOOD_PIX = DQ_WARM_PIX + DQ_BAD_COL + DQ_FULL_WELL + DQ_SINK_PIX # Make these OK"
+    "DQ_GOOD_PIX = DQ_WARM_PIX  # Make these OK"
    ]
   },
   {
@@ -294,7 +291,7 @@
    "id": "4b73b4ca-9625-4ecc-8c8f-87dcfebfc010",
    "metadata": {},
    "source": [
-    "### Drizzle F814W Images"
+    "### Drizzle F665N Images"
    ]
   },
   {
@@ -308,13 +305,13 @@
    "source": [
     "# Drizzle Images\n",
     "AstroDrizzle(\n",
-    "    [str(fn) for fn in fileNameDict['F814W']],\n",
-    "    output='NGC4696-F814W',\n",
-    "    runfile='F814W-Astro.log',\n",
+    "    [str(fn) for fn in fileNameDict['F665N']],\n",
+    "    output='NGC4696-F665N',\n",
+    "    runfile='F665N-Astro.log',\n",
     "    wcskey='GAIA',\n",
     "    context=False,\n",
     "    configobj=None,\n",
-    "    num_cores=8,\n",
+    "    num_cores=1,\n",
     "    in_memory=False,\n",
     "    build=True,\n",
     "    restore=False,\n",
@@ -323,58 +320,16 @@
     "    skymethod='globalmin+match',\n",
     "    driz_sep_scale=0.03,\n",
     "    driz_sep_bits=DQ_GOOD_PIX,\n",
-    "    combine_type='minmed',\n",
+    "    combine_type='median',\n",
+    "    combine_nlow=4,\n",
+    "    combine_nhigh=4,\n",
     "    driz_cr_corr=False,\n",
     "    final_wht_type='IVM',\n",
-    "    final_pixfrac=0.8,\n",
+    "    final_pixfrac=0.1,\n",
     "    final_bits=DQ_GOOD_PIX,\n",
     "    final_wcs=True,\n",
     "    final_rot=0,\n",
     "    final_scale=0.03\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f467a6a-8c04-4c0d-87c2-cd4fa95890c3",
-   "metadata": {},
-   "source": [
-    "### Drizzle F475W Images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5d028a2-1248-4d93-b9b5-3d502c0909bc",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Drizzle Images\n",
-    "AstroDrizzle(\n",
-    "    [str(fn) for fn in fileNameDict['F475W']],\n",
-    "    output='NGC4696-F475W',\n",
-    "    runfile='F475W-Astro.log',\n",
-    "    wcskey='GAIA',\n",
-    "    context=False,\n",
-    "    configobj=None,\n",
-    "    num_cores=8,\n",
-    "    in_memory=False,\n",
-    "    build=True,\n",
-    "    restore=False,\n",
-    "    preserve=False,\n",
-    "    clean=True,\n",
-    "    skymethod='globalmin+match',\n",
-    "    driz_sep_scale=0.03,\n",
-    "    driz_sep_bits=DQ_GOOD_PIX,\n",
-    "    combine_type='minmed',\n",
-    "    driz_cr_corr=False,\n",
-    "    final_wht_type='IVM',\n",
-    "    final_pixfrac=0.8,\n",
-    "    final_bits=DQ_GOOD_PIX,\n",
-    "    final_wcs=True,\n",
-    "    final_refimage='NGC4696-F814W_drc.fits'\n",
     ")"
    ]
   },
@@ -414,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
