--- a/Images/ImageReducer.ipynb
+++ b/Images/ImageReducer.ipynb
@@ -261,6 +261,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e34992",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = 2.26998e+06\n",
+    "std  = 502180.\n",
+    "print(0.3*mean)\n",
+    "print(std)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5184746e-d059-4b54-b209-f69658b672c7",
    "metadata": {},
@@ -325,7 +338,7 @@
     "    combine_nhigh=4,\n",
     "    driz_cr_corr=False,\n",
     "    final_wht_type='IVM',\n",
-    "    final_pixfrac=0.1,\n",
+    "    final_pixfrac=0.0,\n",
     "    final_bits=DQ_GOOD_PIX,\n",
     "    final_wcs=True,\n",
     "    final_rot=0,\n",
