Ran CR rm on F814W

--- a/Images/DeepCR-Remover.ipynb
+++ b/Images/DeepCR-Remover.ipynb
@@ -42,7 +42,10 @@
     "from astropy.io import fits\n",
     "\n",
     "# Other Astronomy Imports\n",
-    "from deepCR import deepCR"
+    "from deepCR import deepCR\n",
+    "\n",
+    "# TQDM\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -120,7 +123,8 @@
     "    # Start the Empty List if Key does not exist\n",
     "    if filt not in fileNameDict:\n",
     "        fileNameDict[filt] = []\n",
-    "    fileNameDict[filt].append(fn)"
+    "    fileNameDict[filt].append(fn)\n",
+    "fileNameDict"
    ]
   },
   {
@@ -165,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Loop Through Files\n",
-    "for fn in fileNameDict['F814W']:\n",
+    "for fn in tqdm(fileNameDict['F814W']):\n",
     "\n",
     "    # Out Name\n",
     "    outName = fn.with_name(fn.name.replace('flc.fits', 'crclean_flc.fits'))\n",
@@ -196,81 +200,13 @@
     "        outList.insert(8, fits.ImageHDU(crmsk2.astype('uint8'), hduList['SCI', 2].header, 'MSK'))\n",
     "        outList.writeto(outName, overwrite=True)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c892a8a2-b8d8-4474-a397-81f5d29fd12a",
-   "metadata": {},
-   "source": [
-    "### Remove F475W CRs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7009fa2-4850-415f-92c0-3bfe5f846302",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Create the Model\n",
-    "mdl = deepCR(\n",
-    "    mask='ACS-WFC-F435W',\n",
-    "    device='GPU'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5edfa6af-b193-4be9-bb9c-4768b00e56f7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Loop Through Files\n",
-    "for fn in fileNameDict['F475W']:\n",
-    "\n",
-    "    # Out Name\n",
-    "    outName = fn.with_name(fn.name.replace('flc.fits', 'crclean_flc.fits'))\n",
-    "\n",
-    "    # Open Image\n",
-    "    with fits.open(fn) as hduList:\n",
-    "\n",
-    "        # Get Cleaned Arrays\n",
-    "        crmsk1, crarr1 = mdl.clean(\n",
-    "            hduList['SCI', 1].data,\n",
-    "            binary=True,\n",
-    "            inpaint=True, n_jobs=1\n",
-    "        )\n",
-    "        crmsk2, crarr2 = mdl.clean(\n",
-    "            hduList['SCI', 2].data,\n",
-    "            binary=True,\n",
-    "            inpaint=True, n_jobs=1\n",
-    "        )\n",
-    "\n",
-    "        # Write the Output Data\n",
-    "        outList = hduList.copy()  # Copy the Original File\n",
-    "        outList[0].header.add_history('CRs removed with DeepCR')  # Update comment about processing\n",
-    "        outList[0].header.add_comment('Created by Will Waldron, UAH')\n",
-    "        outList[0].header.add_comment('Created with pipeline at https://github.com/wwaldron/galred')\n",
-    "        outList['SCI', 1].data = crarr1.astype('float32')  # Change the old SCI image for CR Removed img\n",
-    "        outList['DQ', 1].data[crmsk1.astype(bool)] |= 2  # Mark DQ array as \"Data replaced by fill\"\n",
-    "        outList.insert(4, fits.ImageHDU(crmsk1.astype('uint8'), hduList['SCI', 1].header, 'MSK'))\n",
-    "        outList['SCI', 2].data = crarr2.astype('float32')\n",
-    "        outList['DQ', 2].data[crmsk1.astype(bool)] |= 2  # Mark DQ array as \"Data replaced by fill\"\n",
-    "        outList.insert(8, fits.ImageHDU(crmsk2.astype('uint8'), hduList['SCI', 2].header, 'MSK'))\n",
-    "        outList.writeto(outName, overwrite=True)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dcr]",
+   "display_name": "dcr",
    "language": "python",
-   "name": "conda-env-dcr-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -282,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
