Updated F665N Drizzle for multi-pixfrac

--- a/Images/ImageReducer.ipynb
+++ b/Images/ImageReducer.ipynb
@@ -35,7 +35,10 @@
     "# Astropy Colab Imports\n",
     "from astropy.io import fits\n",
     "from drizzlepac.tweakreg import TweakReg\n",
-    "from drizzlepac.astrodrizzle import AstroDrizzle"
+    "from drizzlepac.astrodrizzle import AstroDrizzle\n",
+    "\n",
+    "# Iter Help\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -304,33 +307,34 @@
    "outputs": [],
    "source": [
     "# Drizzle Images\n",
-    "AstroDrizzle(\n",
-    "    [str(fn) for fn in fileNameDict['F665N']],\n",
-    "    output='NGC4696-F665N',\n",
-    "    runfile='F665N-Astro.log',\n",
-    "    wcskey='GAIA',\n",
-    "    context=False,\n",
-    "    configobj=None,\n",
-    "    num_cores=1,\n",
-    "    in_memory=False,\n",
-    "    build=True,\n",
-    "    restore=False,\n",
-    "    preserve=False,\n",
-    "    clean=True,\n",
-    "    skymethod='globalmin+match',\n",
-    "    driz_sep_scale=0.03,\n",
-    "    driz_sep_bits=DQ_GOOD_PIX,\n",
-    "    combine_type='median',\n",
-    "    combine_nlow=4,\n",
-    "    combine_nhigh=4,\n",
-    "    driz_cr_corr=False,\n",
-    "    final_wht_type='IVM',\n",
-    "    final_pixfrac=0.1,\n",
-    "    final_bits=DQ_GOOD_PIX,\n",
-    "    final_wcs=True,\n",
-    "    final_rot=0,\n",
-    "    final_scale=0.03\n",
-    ")"
+    "for pixfrac in tqdm([0.75, 0.5, 0.25]):\n",
+    "    AstroDrizzle(\n",
+    "        [str(fn) for fn in fileNameDict['F665N']],\n",
+    "        output=f'NGC4696-F665N-pf_{int(pixfrac*100):03d}',\n",
+    "        runfile='F665N-Astro.log',\n",
+    "        wcskey='GAIA',\n",
+    "        context=False,\n",
+    "        configobj=None,\n",
+    "        num_cores=1,\n",
+    "        in_memory=False,\n",
+    "        build=True,\n",
+    "        restore=False,\n",
+    "        preserve=False,\n",
+    "        clean=True,\n",
+    "        skymethod='globalmin+match',\n",
+    "        driz_sep_scale=0.03,\n",
+    "        driz_sep_bits=DQ_GOOD_PIX,\n",
+    "        combine_type='median',\n",
+    "        combine_nlow=4,\n",
+    "        combine_nhigh=4,\n",
+    "        driz_cr_corr=False,\n",
+    "        final_wht_type='IVM',\n",
+    "        final_pixfrac=pixfrac,\n",
+    "        final_bits=DQ_GOOD_PIX,\n",
+    "        final_wcs=True,\n",
+    "        final_rot=0,\n",
+    "        final_scale=0.03\n",
+    "    )"
    ]
   },
   {
