--- a/Data/GAIA/GAIA_Downloader.ipynb
+++ b/Data/GAIA/GAIA_Downloader.ipynb
@@ -279,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:stenv]",
+   "display_name": "stenv",
    "language": "python",
-   "name": "conda-env-stenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
