--- a/Images/ImageReducer.ipynb
+++ b/Images/ImageReducer.ipynb
@@ -173,11 +173,15 @@
    "outputs": [],
    "source": [
     "# DQ Bits\n",
-    "DQ_FILLED   = 2\n",
-    "DQ_BAD_DET  = 4\n",
-    "DQ_HOT_PIX  = 16\n",
-    "DQ_CR_PIX   = 4096+8192\n",
-    "DQ_GOOD_PIX = ~(DQ_FILLED + DQ_BAD_DET + DQ_HOT_PIX + DQ_CR_PIX) # Ignore these"
+    "DQ_GOOD_PIX = 64 # Keep These (Warm Pixels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35d675f4",
+   "metadata": {},
+   "source": [
+    "**Note**: F665N was aligned by Prathamsh"
    ]
   },
   {
@@ -187,36 +191,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop through Filters\n",
-    "for filter, fileList in fileNameDict.items():\n",
+    "# Filter and File List\n",
+    "filter, fileList = 'F814W', fileNameDict['F814W']\n",
     "\n",
-    "    # Image Dep Search Parameters\n",
-    "    threshold  = 6.0\n",
-    "    conv_width = 3.5\n",
+    "# Image Find Parameters\n",
+    "imagefindcfg = dict(\n",
+    "    # peakmax=900,\n",
+    "    threshold=5.0,\n",
+    "    conv_width=3.5,\n",
+    "    dqbits=DQ_GOOD_PIX\n",
+    ")\n",
     "\n",
-    "    # Image Find Parameters\n",
-    "    imagefindcfg = dict(\n",
-    "        # peakmax=900,\n",
-    "        threshold=threshold,\n",
-    "        conv_width=conv_width,\n",
-    "        dqbits=DQ_GOOD_PIX\n",
-    "    )\n",
-    "\n",
-    "    # Align the Images to the GAIA data\n",
-    "    TweakReg(\n",
-    "        [str(fn) for fn in fileList],\n",
-    "        updatehdr=False,\n",
-    "        wcsname='GAIA',\n",
-    "        clean=True,\n",
-    "        configobj=None,\n",
-    "        refcat='../Data/GAIA/NGC4696-GAIA-RefCatalog-icrs.txt',\n",
-    "        runfile=f'TweakReg-GAIA-{filter}.log',\n",
-    "        searchrad=0.35,\n",
-    "        minobj=15,\n",
-    "        tolerance=1.00,\n",
-    "        imagefindcfg=imagefindcfg,\n",
-    "        interactive=False\n",
-    "    )"
+    "# Align the Images to the GAIA data\n",
+    "TweakReg(\n",
+    "    [str(fn) for fn in fileList],\n",
+    "    updatehdr=True,\n",
+    "    wcsname='GAIA',\n",
+    "    clean=True,\n",
+    "    configobj=None,\n",
+    "    refcat='../Data/GAIA/NGC4696-GAIA-RefCatalog-icrs.txt',\n",
+    "    runfile=f'TweakReg-GAIA-{filter}.log',\n",
+    "    searchrad=2,\n",
+    "    minobj=15,\n",
+    "    tolerance=1.25,\n",
+    "    imagefindcfg=imagefindcfg,\n",
+    "    interactive=False\n",
+    ")"
    ]
   },
   {
@@ -335,6 +335,52 @@
     "        final_rot=0,\n",
     "        final_scale=0.03\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681a4c67",
+   "metadata": {},
+   "source": [
+    "### Drizzle F814W Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b5fc5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drizzle Images\n",
+    "AstroDrizzle(\n",
+    "    [str(fn) for fn in fileNameDict['F814W']],\n",
+    "    output='NGC4696-F814W',\n",
+    "    runfile='F814W-Astro.log',\n",
+    "    wcskey='GAIA',\n",
+    "    context=False,\n",
+    "    configobj=None,\n",
+    "    num_cores=1,\n",
+    "    in_memory=False,\n",
+    "    build=True,\n",
+    "    restore=False,\n",
+    "    preserve=False,\n",
+    "    clean=True,\n",
+    "    skymethod='globalmin+match',\n",
+    "    driz_sep_scale=0.03,\n",
+    "    driz_sep_bits=DQ_GOOD_PIX,\n",
+    "    combine_type='minmed',\n",
+    "    combine_nlow=0,\n",
+    "    combine_nhigh=0,\n",
+    "    driz_cr_corr=False,\n",
+    "    final_wht_type='IVM',\n",
+    "    final_pixfrac=0.8,\n",
+    "    final_bits=DQ_GOOD_PIX,\n",
+    "    final_wcs=True,\n",
+    "    final_rot=0,\n",
+    "    final_scale=0.03,\n",
+    "    final_refimage='NGC4696-F665N_drc.fits'\n",
+    ")"
    ]
   },
   {
